# optimize-roblox

./: CMakeLists.txt  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml
build-scripts/: build.sh  complete-setup.sh  create-project.sh  package.sh  setup-project.sh
include/common/: AndroidOptimizer.h  BaseOptimizer.h  Config.h  Logger.h  ProcessManager.h  RegistryManager.h  SystemManager.h  Utils.h  WindowsOptimizer.h
src/android/: AndroidOptimizer.cpp  SystemManager.cpp  main_android.cpp
src/common/: Config.cpp  Logger.cpp  Utils.cpp  WindowsOptimizer.cpp  main_windows.cpp
src/windows/: ProcessManager.cpp  RegistryManager.cpp
